<resources>
    <string name="app_name">Tepuk Apps</string>
    <string name="signin">SIGN IN</string>
    <string name="signup">SIGN UP</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="bio">Your Passion</string>
    <string name="countinue">Continue</string>
    <string name="nama">Abiyyu Habibi</string>
    <string name="title_activity_home2">HomeActivity2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="home">Home</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="pupuk_name">Nama pupuk</string>
    <string name="detail">Detail</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_history">History</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="macam_pupuk">
        <item>gandasil-b</item>
        <item>gandasil-d</item>
        <item>kcl</item>
        <item>ponska</item>
        <item>sp36</item>
        <item>tsp</item>
        <item>urea</item>
        <item>za</item>
    </string-array>

    <string-array name="deskripsi">
        <item>Cie abis beli gandasil-b</item>
        <item>Cie abis beli gandasil-d</item>
        <item>Cie abis beli kcl</item>
        <item>Cie abis beli ponska</item>
        <item>Cie abis beli sp36</item>
        <item>Cie abis beli tsp</item>
        <item>Cie abis beli urea</item>
        <item>Cie abis beli za</item>
    </string-array>

    <string-array name="harga">
        <item>Rp. 13.000</item>
        <item>Rp. 13.000</item>
        <item>Rp. 11.000</item>
        <item>Rp. 20.000</item>
        <item>Rp. 10.000</item>
        <item>Rp. 13.000</item>
        <item>Rp. 15.000</item>
        <item>Rp. 5.000</item>
    </string-array>

    <string-array name="kode">
        <item>#gndslB</item>
        <item>#gndslD</item>
        <item>#kc1</item>
        <item>#p0nsk4</item>
        <item>#5p36</item>
        <item>#t5p</item>
        <item>#u2e4</item>
        <item>#z4</item>
    </string-array>

</resources>
