<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundku"
    tools:context=".Signin">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="121dp"
        android:layout_height="174dp"
        android:layout_marginTop="24dp"
        android:src="@drawable/logomantab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:elevation="4dp"
        android:background="@drawable/bg_layout_white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:orientation="vertical"
        android:paddingTop="30dp"
        android:paddingBottom="30dp"
        android:layout_marginEnd="24dp"
        android:layout_marginStart="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView3" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_marginBottom="24dp"
                android:text="@string/username"
                android:fontFamily="@font/montserratlight"
                android:textColor="@color/GrayFamilly"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/xusername"
                android:inputType="text"
                android:fontFamily="@font/montserratlight"
                android:lineSpacingExtra="1dp"
                android:textColor="@color/BlackPrimary"
                android:paddingLeft="12dp"
                android:hint="name user"
                android:background="@drawable/bg_input_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/montserratlight"
                android:text="@string/password"
                android:textColor="@color/GrayFamilly"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/xpassword"
                android:inputType="textPassword"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/montserratlight"
                android:lineSpacingExtra="1dp"
                android:textColor="@color/BlackPrimary"
                android:paddingLeft="12dp"
                android:hint="password"
                android:background="@drawable/bg_input_edit"
                android:layout_width="match_parent"
                android:layout_height="50dp"/>


        </LinearLayout>


        <Button
            android:id="@+id/btn_signin"
            android:layout_width="match_parent"
            android:layout_marginRight="24dp"
            android:layout_marginLeft="24dp"
            android:layout_marginTop="10dp"
            android:layout_height="55dp"
            android:background="@drawable/btn_blue"
            android:text="@string/signin"
            android:textColor="#fff"
            android:textSize="22sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/btn_new_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/montserratlight"
        android:text="Create New Account"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="22dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />



</androidx.constraintlayout.widget.ConstraintLayout>