<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundku"
    tools:context=".Signup">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/montserratregular"
        android:text="CREATE NEW ACCOUNT"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.526"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/montserratlight"
        android:lineSpacingExtra="9dp"
        android:text="Please  fill up the form below \nfor information"
        android:textAlignment="center"
        android:textColor="#fff"
        android:textSize="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.513"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:elevation="4dp"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:id="@+id/LinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/bg_layout_white"
        android:orientation="vertical"
        android:paddingTop="24dp"
        android:paddingBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.132"
        tools:layout_editor_absoluteX="0dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_marginBottom="24dp"
                android:text="@string/username"
                android:fontFamily="@font/montserratlight"
                android:textColor="@color/GrayFamilly"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutUsername">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/xusername"
                    android:inputType="text"
                    android:fontFamily="@font/montserratlight"
                    android:lineSpacingExtra="1dp"
                    android:textColor="@color/BlackPrimary"
                    android:paddingLeft="12dp"
                    android:hint="name user"
                    android:background="@drawable/bg_input_edit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_marginTop="24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/montserratlight"
                android:text="@string/password"
                android:textColor="@color/GrayFamilly"
                android:textSize="20dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutPassword"
                app:passwordToggleEnabled="true"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/xpassword"
                    android:inputType="textPassword"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="@font/montserratlight"
                    android:lineSpacingExtra="1dp"
                    android:textColor="@color/BlackPrimary"
                    android:paddingLeft="12dp"
                    android:hint="password"
                    android:background="@drawable/bg_input_edit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:fontFamily="@font/montserratlight"
                android:text="@string/email"
                android:textColor="@color/GrayFamilly"
                android:textSize="20dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/layoutEmail">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:inputType="textEmailAddress"
                    android:layout_marginBottom="24dp"
                    android:fontFamily="@font/montserratlight"
                    android:lineSpacingExtra="1dp"
                    android:textColor="@color/BlackPrimary"
                    android:paddingLeft="12dp"
                    android:hint="@string/email"
                    android:background="@drawable/bg_input_edit"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"/>
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


    </LinearLayout>

    <Button
        android:id="@+id/btn_continue"
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/btn_blue"
        android:fontFamily="@font/montserratregular"
        android:text="@string/countinue"
        android:textSize="20sp"
        android:textColor="#fff"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/LinearLayout"/>

    <LinearLayout
        android:id="@+id/btn_back"
        android:layout_width="90dp"
        android:layout_height="55dp"
        android:layout_marginEnd="24dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/bg_layout_white"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintEnd_toStartOf="@id/btn_continue"
        app:layout_constraintTop_toBottomOf="@id/LinearLayout">

        <ImageView
            android:layout_width="30dp"
            android:layout_height="28dp"
            android:src="@drawable/ic_back"/>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>